# zsagenda

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
docs/superpowers/plans/: 2026-04-04-modernization-plan.md
docs/superpowers/specs/: 2026-04-04-modernization-design.md
requirements/: base.txt  dev.txt
zsagenda/: manage.py
zsagenda/project_static_files/css/: styles.css
zsagenda/regform/: admin.py  forms.py  models.py  utils.py  views.py
zsagenda/regform/migrations/: 0001_initial.py  0002_auto_20190114_0926.py  0003_registrationanswer_email_sent.py  0004_auto_20190114_2022.py  0005_auto_20190116_0032.py  0006_auto_20190116_1849.py  0007_auto_20190117_2324.py  0008_auto_20190117_2348.py  0009_auto_20190118_1425.py  0010_substitutecontact.py  0011_auto_20190118_1519.py  0012_auto_20230131_2146.py  0013_registrationanswer_substitute.py  0014_auto_20230131_2245.py  0015_auto_20250202_2229.py
zsagenda/regform/tests/: test_forms.py  test_views.py
zsagenda/templates/: 500.html  base.html  registration_closed.html  registration_done.html  registration_form.html
zsagenda/templates/mail/: registration_confirmation.txt  substitute_notification.txt
zsagenda/templates/snippets/: form_field.html
zsagenda/zsagenda/: settings.py  urls.py  wsgi.py
zsagenda/zsagenda/settings/: base.py  dev.py  production.py
