[project]
name = "zsagenda"
version = "1.0.0"
description = "School registration time slot scheduler"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2,<5.3",
    "django-extensions",
    "gunicorn",
]

[dependency-groups]
dev = [
    "model-bakery",
    "pudb",
    "pylint",
    "pylint-django",
    "ruff",
]

[tool.pylint]
max-line-length = 120
disable = [
    "C0111",
    "C0103",
    "C0114",
    "C0115",
    "C0116",
    "R0903",
]
django-settings-module = "zsagenda.settings.base"
load-plugins = "pylint_django"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "B"]
ignore = ["E501"]
